--- a/Examples/Phonebook/Phonebook.vcxproj.filters
+++ b/Examples/Phonebook/Phonebook.vcxproj.filters
@@ -32,7 +32,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Contact.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
