--- a/Examples/Shapes/Shapes.vcxproj.filters
+++ b/Examples/Shapes/Shapes.vcxproj.filters
@@ -34,7 +34,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shapes.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
