--- a/Examples/SmartPointer/SmartPointer.vcxproj.filters
+++ b/Examples/SmartPointer/SmartPointer.vcxproj.filters
@@ -37,7 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dummy.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
