--- a/Examples/TemplateStack/TemplateStack.vcxproj.filters
+++ b/Examples/TemplateStack/TemplateStack.vcxproj.filters
@@ -29,7 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TemplateStack.hpp">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
