--- a/Examples/Fraction/Fraction.vcxproj
+++ b/Examples/Fraction/Fraction.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{68180538-f272-4b89-a20d-2c59cbb804dc}</ProjectGuid>
-    <RootNamespace>SmartPointer</RootNamespace>
+    <ProjectGuid>{81090aee-4915-4759-b746-daf46060fd57}</ProjectGuid>
+    <RootNamespace>Fraction</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>SmartPointerImpl</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,18 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Image Include="Resources\cpp_smart_pointer.png" />
+    <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Fraction.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Fraction.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Readme.md" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Dummy.cpp" />
-    <ClCompile Include="Program.cpp" />
-    <ClCompile Include="SmartPointerImpl.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Dummy.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
