--- a/Examples/CustomTuple/CustomTuple.vcxproj.filters
+++ b/Examples/CustomTuple/CustomTuple.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CustomTuple03.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
