Continued working on tuple

--- a/Examples/CustomTuple/CustomTuple.vcxproj
+++ b/Examples/CustomTuple/CustomTuple.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="CustomTuple01.cpp" />
     <ClCompile Include="CustomTuple02.cpp" />
     <ClCompile Include="CustomTuple03.cpp" />
+    <ClCompile Include="CustomTuple04.cpp" />
     <ClCompile Include="Program.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
