--- a/Examples/CustomTuple/CustomTuple.vcxproj.filters
+++ b/Examples/CustomTuple/CustomTuple.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="CustomTuple03.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CustomTuple04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
