continued work on tuple

--- a/Examples/CustomTuple/CustomTuple.vcxproj
+++ b/Examples/CustomTuple/CustomTuple.vcxproj
@@ -116,6 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -146,6 +147,7 @@
     <ClCompile Include="CustomTuple02.cpp" />
     <ClCompile Include="CustomTuple03.cpp" />
     <ClCompile Include="CustomTuple04.cpp" />
+    <ClCompile Include="CustomTuple05.cpp" />
     <ClCompile Include="Program.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
