--- a/Examples/StackTemplate/TemplateStack.vcxproj
+++ b/Examples/StackTemplate/TemplateStack.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{581ac52d-f6a2-4346-9ad9-59cd7f18523f}</ProjectGuid>
-    <RootNamespace>CustomTuple</RootNamespace>
+    <ProjectGuid>{1f9b0b40-f0b5-4e3a-a41c-f44200edaac4}</ProjectGuid>
+    <RootNamespace>TemplateStack</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>StackTemplate</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -116,7 +117,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,13 +143,11 @@
     <None Include="Resources\Readme.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CustomTuple01.cpp" />
-    <ClCompile Include="CustomTuple02.cpp" />
-    <ClCompile Include="CustomTuple03.cpp" />
-    <ClCompile Include="CustomTuple04.cpp" />
-    <ClCompile Include="CustomTuple05.cpp" />
-    <ClCompile Include="Cpp_Compiler_Endless_Loop.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="StackTemplate.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TemplateStack.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
