--- a/Examples/HashMap/HashMap.vcxproj.filters
+++ b/Examples/HashMap/HashMap.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestHash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Hash.hpp">
