continued working on hash map

--- a/Examples/HashMap02/HashMap02.vcxproj.filters
+++ b/Examples/HashMap02/HashMap02.vcxproj.filters
@@ -15,28 +15,18 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Program.cpp">
+    <ClInclude Include="hash_map.h">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="TestHash.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Hash.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="TestHashMap.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Hash.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="HashMap.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="HashMap.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <None Include="hash_map.inl">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test_hash_map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
