--- a/Examples/HashMap02/HashMap02.vcxproj
+++ b/Examples/HashMap02/HashMap02.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ffde0af7-78ee-4505-9994-d2ec2d8d38a5}</ProjectGuid>
-    <RootNamespace>HashMap</RootNamespace>
+    <ProjectGuid>{d8060036-8006-47ba-ad19-04bec6110d3f}</ProjectGuid>
+    <RootNamespace>HashMap02</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,15 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hash.h" />
-    <ClCompile Include="Program.cpp" />
-    <ClCompile Include="TestHash.cpp" />
-    <ClCompile Include="TestHashMap.cpp" />
+    <ClInclude Include="hash_map.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Hash.hpp" />
-    <ClInclude Include="HashMap.h" />
-    <ClInclude Include="HashMap.hpp" />
+    <None Include="hash_map.inl" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="test_hash_map.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
