--- a/Examples/HashMap/HashMap.vcxproj
+++ b/Examples/HashMap/HashMap.vcxproj
@@ -128,17 +128,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hash.h" />
+    <ClCompile Include="Hash.ixx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="std.ixx" />
     <ClCompile Include="TestHash.cpp" />
     <ClCompile Include="TestHashMap_01_Basics.cpp" />
     <ClCompile Include="TestHashMap_02_Construction_Assignment.cpp" />
     <ClCompile Include="TestHashMap_03_STL_Compliance.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ConstHashMapIterator.h" />
-    <ClInclude Include="HashMapIterator.h" />
-    <ClInclude Include="HashMap.h" />
+    <ClCompile Include="ConstHashMapIterator.ixx">
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="HashMapIterator.ixx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <FileType>Document</FileType>
+    </ClCompile>
+    <ClCompile Include="HashMap.ixx">
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
