continued work on hash map

--- a/Examples/HashMap/HashMap.vcxproj
+++ b/Examples/HashMap/HashMap.vcxproj
@@ -132,9 +132,6 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="std.ixx">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="TestHashMap.ixx" />
     <ClCompile Include="TestHashMap_01_Hash_Funtion.ixx" />
     <ClCompile Include="TestHashMap_02_Basics.ixx" />
@@ -154,6 +151,9 @@
       <FileType>Document</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Readme.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
